--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
+    "@pixi/react": "^8.0.3",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
+    "pixi.js": "^8.12.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "three": "^0.179.1",
+    "webgl-fluid": "^0.3.9",
+    "webgl-fluid-enhanced": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
