--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@pixi/react": "^8.0.3",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "@supabase/supabase-js": "^2.57.0",
     "@tailwindcss/vite": "^4.1.12",
+    "dotenv": "^17.2.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
     "pixi.js": "^8.12.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "^4.1.12",
     "three": "^0.179.1",
     "webgl-fluid": "^0.3.9",
